@@ -244,7 +244,7 @@
                                 <option>syslog+console</option>.  If the
                                 argument is omitted
                                 <option>--default-standard-output=</option>
-                                defaults to <option>journal</option>
+                                defaults to <option>tty</option>
                                 and
                                 <option>--default-standard-error=</option>
                                 to
